version/0.81/_sources/autoapi/pyedb/workflows/drc/drc/DiffPairLengthMatch.rst.txt






:class:`DiffPairLengthMatch`
============================


.. py:class:: pyedb.workflows.drc.drc.DiffPairLengthMatch(/, **data: Any)

   Bases: :py:obj:`pydantic.BaseModel`


   
   Length matching constraint for differential pairs.

   This rule validates that the length difference between positive and
   negative traces in differential pairs stays within tolerance.


   :Attributes:

       **name** : :class:`python:str`
           Rule identifier for reporting violations.

       **tolerance** : :class:`python:str`
           Maximum allowed length difference with unit (e.g., ``"0.1mm"``, ``"5mil"``).

       **pairs** : :class:`python:list` :obj:`of` :obj:`DiffPair`
           List of differential pairs to validate.












   .. rubric:: Examples

   >>> pair1 = DiffPair(positive="USB_DP", negative="USB_DN")
   >>> rule = DiffPairLengthMatch(name="usb_match", tolerance="0.1mm", pairs=[pair1])
   >>> rule.tolerance
   '0.1mm'

   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DiffPairLengthMatch

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 
          * - :py:attr:`~tolerance`
            - 
          * - :py:attr:`~pairs`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.workflows.drc.drc import DiffPairLengthMatch


Attribute detail
----------------

.. py:attribute:: name
   :type:  str

.. py:attribute:: tolerance
   :type:  str

.. py:attribute:: pairs
   :type:  list[DiffPair]





